reworked test script to allow more diverse testing

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 
 services:
-  demo:
-    build: .
+  web:
+    build:
+      context: ./ubuntu
     command: /usr/sbin/sshd -D
-    
+    deploy:
+      replicas: 5
