--- a/test.cfg
+++ b/test.cfg
@@ -2,11 +2,11 @@
     {
       "role" : "web",
       "os" : "ubuntu",
-      "number" : "5"
+      "number" : "1"
     },
     {
       "role" : "db",
-      "os" : "alpine",
+      "os" : "ubuntu",
       "number" : "5"
     }
   ]
